# AI-App

./: README.md  app.py  environment.yml  main.py  pyproject.toml  requirements.txt  run_dataset_builder.py
app/: __init__.py
app/services/: __init__.py  augmentation_engine.py  data_insights.py  data_loader.py  data_merger.py  dataset_builder.py  evaluator.py  explainability.py  export_service.py  model_factory.py  scenario_generator.py  schema_validator.py  trainer.py
app/shiny_app/: __init__.py  application.py
app/shiny_app/server/: __init__.py  handlers.py
app/shiny_app/ui/: __init__.py  layout.py  theme.py
app/ui/: app.py
app/ui/pages/: __init__.py  analysis_evaluation.py  data_augmentation.py  data_import.py  dataset_builder.py  dataset_validation.py  inspect_explainability.py  introduction.py  model_architecture.py  predict_inference.py  training.py  training_dataset_builder.py
docs/: WORKFLOW_TESTPLAN.md
tests/: test_dataset_builder.py  test_pipeline_e2e.py  test_trainer.py
